# whale-speech-detection

./: README.md  pyproject.toml  requirements.txt
whale_speech_detection/: requirements.txt
whale_speech_detection/data/: load_dataset.py  utils.py  yoho.py
whale_speech_detection/models/yoho_cnn/: yoho_cnn.py
whale_speech_detection/training/: run_training.py
