[tool.poetry]
name = "whale-speech-detection"
version = "0.1.0"
description = ""
authors = ["David Robinson <david.robinson@recoverx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.22.1"
librosa = "^0.9.2"
torch = "^1.12.1"
Pillow = "^9.2.0"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
matplotlib = "^3.6.0"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
